--- a/src/UserModules/checkout/checkout.scss
+++ b/src/UserModules/checkout/checkout.scss
@@ -33,27 +33,42 @@
         border-radius: 9px;
         /* border: 3px solid green; */
         box-shadow: -5px 1px 10px 10px;
+        .text{
+        margin: 18px;
+        }
     .fields{
         display: flex;
-        align-items: baseline;
+        align-items: center;
         justify-content: space-evenly;
+        flex-direction: column;
         label{
-            font-size: 24px;
+            width: 75%;
+            display: flex;
+            align-items: center;
+            justify-content: start;
         }
         input{
             border: 1px solid #00000059;
             padding: 10px;
-            width: 53%;
+            width: 75%;
             border-radius: 10px;
             margin: 15px;
             height: 42px;
         
     }
-
+    .rating i {
+        font-size: 24px;
+        color: #ccc;
+        cursor: pointer;
+      }
+      
+      .rating i.selected {
+        color: #ffa500;
+      }
     textarea{
         border: 1px solid #00000059;
         padding: 12px;
-        width: 53%;
+        width: 75%;
         border-radius: 10px;
         margin: 31px;
         height: 100px;
