--- a/src/UserModules/userDashboard/UserDashboard.scss
+++ b/src/UserModules/userDashboard/UserDashboard.scss
@@ -251,3 +251,15 @@ $hover-bg-color: #f0f0f0;
 .pointer {
     cursor: pointer !important;
 }
+
+.start {
+    text-align: start !important;
+}
+
+.width-100 {
+    width: 100% !important;
+}
+
+.d-flex {
+    display: flex !important;
+}
