--- a/src/UserModules/TrackMyOrder/TrackMyOrder.scss
+++ b/src/UserModules/TrackMyOrder/TrackMyOrder.scss
@@ -1,4 +1,3 @@
-
 .card {
   position: relative;
   display: -webkit-box;
@@ -17,16 +16,19 @@
   margin-top: 3%;
   padding-bottom: 40px;
 }
+
 .card-header:first-child {
   border-radius: calc(0.37rem - 1px) calc(0.37rem - 1px) 0 0;
 }
+
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  
+
 }
+
 .track {
   position: relative;
   background-color: #ddd;
@@ -37,6 +39,7 @@
   margin-bottom: 60px;
   margin-top: 50px;
 }
+
 .track .step {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
@@ -46,9 +49,11 @@
   text-align: center;
   position: relative;
 }
+
 .track .step.active:before {
   background: #629d23;
 }
+
 .track .step::before {
   height: 7px;
   position: absolute;
@@ -57,10 +62,12 @@
   left: 0;
   top: 18px;
 }
+
 .track .step.active .icon {
   background: #629d23;
   color: #fff;
 }
+
 .track .icon {
   display: inline-block;
   width: 40px;
@@ -70,14 +77,17 @@
   border-radius: 100%;
   background: #ddd;
 }
+
 .track .step.active .text {
   font-weight: 400;
   color: #000;
 }
+
 .track .text {
   display: block;
   margin-top: 7px;
 }
+
 .itemside {
   position: relative;
   display: -webkit-box;
@@ -85,43 +95,60 @@
   display: flex;
   width: 100%;
 }
+
 .itemside .aside {
   position: relative;
   -ms-flex-negative: 0;
   flex-shrink: 0;
 }
+
 .img-sm {
   width: 80px;
   height: 80px;
   padding: 7px;
 }
+
 ul.row,
 ul.row-sm {
   list-style: none;
   padding: 0;
 }
+
 .itemside .info {
   padding-left: 15px;
   padding-right: 7px;
 }
+
 .itemside .title {
   display: block;
   margin-bottom: 5px;
   color: #212529;
 }
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+
 .btn-warning {
   color: #ffffff;
   background-color: #629d23;
   border-color: #629d23;
   border-radius: 1px;
 }
+
 .btn-warning:hover {
   color: #ffffff;
   background-color: #629d23;
   border-color: #629d23;
   border-radius: 1px;
+}
+
+
+.start {
+  text-align: start !important;
+}
+
+.contain {
+  object-fit: contain !important;
 }
