some changes have done

--- a/src/UserModules/Home/Home.scss
+++ b/src/UserModules/Home/Home.scss
@@ -139,3 +139,32 @@
 .min-height-100 {
     min-height: 100px !important;
 }
+
+.width-100 {
+    width: 100% !important;
+}
+
+.quantity-edit {
+    width: auto !important;
+}
+
+.start {
+    text-align: start !important;
+}
+
+.end {
+    text-align: end !important;
+}
+
+.justify-content-flex-start {
+    justify-content: flex-start !important;
+}
+
+.discount-offer {
+    height: 195px !important;
+
+    .highOfferImg {
+        height: 90% !important;
+    }
+}
+
