--- a/src/UserModules/Home/Home.scss
+++ b/src/UserModules/Home/Home.scss
@@ -168,3 +168,17 @@
     }
 }
 
+
+
+.gap-15 {
+    gap: 15px !important;
+}
+
+.single-discount-with-bg {
+    padding: 28px 50px !important;
+}
+
+.trandProdImage {
+    object-fit: cover !important;
+    max-height: 100px !important;
+}
