--- a/src/UserModules/checkout/checkout.scss
+++ b/src/UserModules/checkout/checkout.scss
@@ -271,7 +271,7 @@ main {
 }
 
 .rating-card .rating-card__front .rating-card__btn:hover {
-    color: hsl(89.02deg 63.54% 37.65%);
+    // color: hsl(89.02deg 63.54% 37.65%);
     // background: white;
 }
 
