Some Corrections Done

--- a/src/CommonModule/Notification/Notification.scss
+++ b/src/CommonModule/Notification/Notification.scss
@@ -18,7 +18,7 @@
     justify-content: space-between;
     transition: transform 0.3s ease-out;
     position: fixed;
-    right: 4px;
+    right: 0;
     z-index: 1000;
     background-color: hsl(223, 10%, 30%);
 }
