--- a/src/UserModules/Header/header.scss
+++ b/src/UserModules/Header/header.scss
@@ -9,3 +9,8 @@
     justify-content: end;
     position: relative;
 }
+
+.filterCategory {
+    padding: 10px !important;
+    width: max-content !important;
+}
