--- a/src/UserModules/Home/Home.scss
+++ b/src/UserModules/Home/Home.scss
@@ -182,3 +182,24 @@
     object-fit: cover !important;
     max-height: 100px !important;
 }
+
+.ProdImage {
+    width: 160px !important;
+    height: 160px !important;
+}
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.justify-content-flex-start {
+    justify-content: flex-start !important;
+}
+
+.pointer {
+    cursor: pointer !important;
+}
+
+.avtiveCategory {
+    background-color: #629D23 !important;
+}
