--- a/src/UserModules/SearchProduct/SearchProduct.scss
+++ b/src/UserModules/SearchProduct/SearchProduct.scss
@@ -5,17 +5,20 @@
     justify-content: center;
     width: 100%;
 }
+
 .single-shopping-card-one .thumbnail-preview {
     width: 100%;
 }
+
 .product-area-wrapper-shopgrid-list.with-list .body-content {
     background: #F3F4F6;
     display: flex;
     align-items: unset;
     justify-content: space-between;
 }
+
 .single-shopping-card-one.discount-offer .thumbnail-preview img {
-    height: 200px !important;  
+    height: 200px !important;
 }
 
 .single-shopping-card-one .thumbnail-preview {
@@ -23,25 +26,47 @@
     overflow: hidden;
     display: block;
     position: relative;
-    width: 63%;
+    // width: 63%;
 }
+
 .single-shopping-card-one.discount-offer .cart-counter-action {
     display: flex;
     align-items: center;
     // justify-content: center;
 }
+
 .single-shopping-card-one .body-content .price-area {
     justify-content: center;
 }
+
 .single-shopping-card-one .cart-counter-action .quantity-edit {
     width: 64%;
 }
+
 .product-area-wrapper-shopgrid-list.with-list .body-content .title-area-left {
     display: flex;
     align-items: baseline !important;
     justify-content: center !important;
     flex-direction: column !important;
 }
+
 .product-area-wrapper-shopgrid-list.with-list .single-shopping-card-one.discount-offer {
     gap: 10%;
+}
+
+.col-lg-20 {
+    min-width: 236px !important;
+    width: 236px !important;
+}
+
+.row>* {
+    margin-top: 8px !important;
+}
+
+.single-category label {
+    display: flex !important;
+}
+
+.pr--25 {
+    padding-right: 25px !important;
 }
