--- a/src/UserModules/productDetail/productDetail.scss
+++ b/src/UserModules/productDetail/productDetail.scss
@@ -5,3 +5,24 @@
     flex-wrap: wrap;
     gap: 18px;
 }
+
+.zoom {
+    background: none !important;
+    width: 400px !important;
+}
+
+.zoom img:hover {
+    opacity: 1 !important;
+}
+
+.cardslide {
+    max-width: 300px !important;
+}
+
+.cardWrapper {
+    gap: 20px !important;
+}
+
+.justify-content-flex-start {
+    justify-content: flex-start !important;
+}
