--- a/src/CommonModule/Register/Register.scss
+++ b/src/CommonModule/Register/Register.scss
@@ -4,3 +4,9 @@ textarea{
     height: 50px;
 
 }
+.button-group{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 25px;
+}
