--- a/src/UserModules/Header/header.scss
+++ b/src/UserModules/Header/header.scss
@@ -14,3 +14,29 @@
     padding: 10px !important;
     width: max-content !important;
 }
+
+
+
+
+.autocomplete-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    position: absolute;
+    width: 100%;
+    z-index: 100;
+    background: white;
+    text-align: start;
+}
+
+.autocomplete-item {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.autocomplete-item:hover {
+    background-color: #f0f0f0;
+}
